full functional todo list app for personal use.

--- a/index.html
+++ b/index.html
@@ -10,16 +10,31 @@
 <body>
     <div class="container">
         <div class="todo-app">
+            <div class="title">
 
-            <h1>Todo-Organization <img class="logoImg" src="img/CPCCU_Final.png"></h1>
+                <h1>Todo-Organization</h1>
+                <img class="logoImg" src="img/todos.png">
+            </div>
 
             <div class="row">
 
                 <input type="text" id="input-box" placeholder="Tasks here...">
-                <button>Add</button>
+                <button id="addTask"><img class="addicon" src="img/add.png"></button>
+                <!-- <button id="addTask">Add</button> -->
             </div>
+
+
+            <ul id="list-container">
+            <!-- 
+                <li class="checked">Task 1</li>
+                <li>Task 2</li>
+                <li>Task 3</li>
+             -->
+            </ul>
         </div>    
             
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
