picture file name edited and added new task functionality

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <div class="row">
 
                 <input type="text" id="input-box" placeholder="Tasks here...">
-                <button id="addTask"><img class="addicon" src="img/add.png"></button>
-                <!-- <button id="addTask">Add</button> -->
+                <!-- <button id="addTask"><img class="addicon" src="img/add.png"></button> -->
+                <button id="addTask">Add</button>
             </div>
 
 
